--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,12 +1,21 @@
+@charset "UTF-8";
+
 body {
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #000;
+  background-image: url("https://images.pexels.com/photos/1027130/pexels-photo-1027130.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
   color: #fff;
+  background-position: center center;
+  /* 画像をタイル状に繰り返し表示しない */
+  background-repeat: no-repeat;
+  /* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
+  background-attachment: fixed;
+  /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
+  background-size: cover;
 }
 
 .navbar-laravel {
-  background-color: #000;
+  background-color: rgba(150, 150, 150, 0.9);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
@@ -15,7 +24,7 @@ body {
 }
 
 .nav-link {
-  color: #fff !important;
+  color: #000 !important;
 }
 
 .table-dark {
@@ -32,10 +41,10 @@ body {
 }
 
 .login-header {
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .login-body {
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(150, 150, 150, 0.8);
 }
 
