--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -1,12 +1,46 @@
 body {
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #000;
+  // background-color: #000;
+  background-image:url("https://images.pexels.com/photos/1027130/pexels-photo-1027130.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
   color: #fff;
+
+  background-position: center center;
+   
+  /* 画像をタイル状に繰り返し表示しない */
+  background-repeat: no-repeat;
+   
+  /* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
+  background-attachment: fixed;
+   
+  /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
+  background-size: cover;
+
 }
 
+// .background-image{
+//   // height:100vh;
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   // background-color: #000;
+//   background-image:url("https://images.pexels.com/photos/1525612/pexels-photo-1525612.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+//   color: #fff;
+
+//   background-position: center center;
+   
+//   /* 画像をタイル状に繰り返し表示しない */
+//   background-repeat: no-repeat;
+   
+//   /* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
+//   background-attachment: fixed;
+   
+//   /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
+//   background-size: cover;
+//   opacity:0.5;
+// }
+
 .navbar-laravel {
-  background-color: #000;
+  background-color: rgba(150, 150, 150, 0.9);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
@@ -15,7 +49,7 @@ body {
 }
 
 .nav-link {
-  color: #fff !important;
+  color: #000 !important;
 }
 
 .table-dark {
@@ -32,9 +66,9 @@ body {
 }
 
 .login-header {
-  background-color: rgba(0, 0, 0, 0.25)
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .login-body {
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(150, 150, 150, 0.8);
 }
