--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -48,27 +48,21 @@ body {
   background-color: rgba(150, 150, 150, 0.8);
 }
 
-#menu li {
-  display: inline;
-  padding: 0;
-  margin: 0;
-}
-
-#menu li a {
-  display: block;
-  border: 1px solid #9F99A3;
-  background-color: #EEEEEE;
-  padding: 3px 10px;
+.btn-circle-flat {
+  display: inline-block;
   text-decoration: none;
-  color: #333;
-  width: 150px;
-  margin: 2px 0px;
-  text-align: left;
-  font-size: 14px;
+  background: #87befd;
+  color: #FFF;
+  width: 120px;
+  height: 120px;
+  line-height: 120px;
+  border-radius: 50%;
+  text-align: center;
+  overflow: hidden;
+  transition: 0.4s;
 }
 
-#menu li a:hover {
-  border: 1px solid #8593A9;
-  background-color: #9EB7DD;
+.btn-circle-flat:hover {
+  background: #668ad8;
 }
 
