--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -60,8 +60,6 @@ body {
   text-align: center;
   overflow: hidden;
   transition: 0.4s;
-  float: left;
-  margin-right: 20px;
 }
 
 .btn-circle-flat:hover {
@@ -72,7 +70,11 @@ h1 {
   text-align: center;
 }
 
-h2 {
+p {
   text-align: center;
+}
+
+div.image img {
+  width: 300px;
 }
 
