--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -5,7 +5,7 @@ body {
   background-image:url("https://images.pexels.com/photos/1027130/pexels-photo-1027130.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
   color: #fff;
 
-  background-position: center center;
+  // background-position: center center;
    
   /* 画像をタイル状に繰り返し表示しない */
   background-repeat: no-repeat;
@@ -84,3 +84,4 @@ p {
 div.image img {
   width: 300px;
 }
+
